--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -16,13 +16,7 @@ body{
     @include center;
 }
 
-.m-b{
-    margin-bottom: 100px;
-}
-
-.m-t{
-    margin-top: 100px;
-}
+// Button
 
 button{
     border-radius: 5px;
@@ -68,6 +62,17 @@ button{
 }
 
 
+// Margin
+
+.m-b{
+    margin-bottom: 100px;
+}
+
+.m-t{
+    margin-top: 100px;
+}
+
+
 .my-1{
     margin-top: 0.25em;
     margin-bottom: 0.25em;
@@ -89,8 +94,8 @@ button{
 }
 
 .my-5{ 
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .my-8{
